applications/namespaces/default/kyverno-policies/validate-argo-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-argo-images
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
        - imageReferences:
          - "quay.io/argoproj/argocd*"
          - "ghcr.io/argoproj/argo-cd/argocd*"
          attestors:
            - count: 1
              entries:
              - keyless:
                  subject: "https://github.com/argoproj/argo-cd/.github/workflows/image-reuse.yaml@refs/tags/v*"
                  issuer: "https://token.actions.githubusercontent.com"
                  rekor:
                      url: https://rekor.sigstore.dev
